# rest_client

./: CMakeLists.txt  Readme.md  main.cpp  rozumexchange.cpp  rozumexchange.hpp
emulator/: CMakeLists.txt  emulator.cpp  handler.cpp  handler.h
